--- a/index.html
+++ b/index.html
@@ -3,20 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/kursor@0.1.6/dist/kursor.min.css" rel="stylesheet">
+</head>
+
+<body id="cuerpo">
+
     <title>Entrega Final</title>
     <h1>Proyecto Final</h1>
     <h2>Bautista Piaggio</h2>
     <h3>Sistema de gestión académica</h3>
-</head>
-<body>
-    <div id="container">
-        <table id="tabla">
 
-        </table>
-    </div>
-    <div id="botones">
-        
+    <div id="app">
+        <div id="container">
+            <table id="tabla">
+
+            </table>
+        </div>
+        <div id="botones">
+
+        </div>
+        <div id="tablacarreras">
+
+        </div>
     </div>
     <script src="./main.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/kursor@0.1.6/dist/kursor.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            new kursor({
+                type: 4,
+                removeDefaultCursor: true
+            });
+        });
+    </script>
 </body>
 </html>
